--- a/index.html
+++ b/index.html
@@ -86,9 +86,18 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_2461.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>My Name</h4>
-      <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <p>Jiajun Yan is about to finish his studies at Howard Community College. His major is AVMP
+(Audio Video Media Production). Before that, he had many years of work experience in
+Guangzhou, China. He worked in the sales team of Yuexiu Real Estate for 5 years and became
+one of the “100-million-yuan Sales” in 2014 due to his outstanding sales performance. Later,
+Jiajun joined Guangzhou WinMax Property Agency with his extensive sales experience. During
+this period, he was exposed to media production and served as corporate communications
+executive. He was responsible for company poster production, trophy customization, interviews,
+event shooting and video production.
+After arriving in the United States, Jiajun helped TekLab School produce promotional videos
+during the pandemic. In addition, he went to HCC to improve his English and media production
+skills. Due to his studies in the United States, he can speak three languages: Mandarin,
+Cantonese and English. In his spare time, Jun also enjoys traveling and photography.
       </p>
       <p>mail: example@example.com</p>
       <p>tel: 5353 35531</p>
