--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ one of the “100-million-yuan Sales” in 2014 due to his outstanding sales per
 Jiajun joined Guangzhou WinMax Property Agency with his extensive sales experience. During
 this period, he was exposed to media production and served as corporate communications
 executive. He was responsible for company poster production, trophy customization, interviews,
-event shooting and video production.
-After arriving in the United States, Jiajun helped TekLab School produce promotional videos
+event shooting and video production.</p>
+</p>After arriving in the United States, Jiajun helped TekLab School produce promotional videos
 during the pandemic. In addition, he went to HCC to improve his English and media production
 skills. Due to his studies in the United States, he can speak three languages: Mandarin,
 Cantonese and English. In his spare time, Jun also enjoys traveling and photography.
