--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h4><b>About Me</b></h4>
     <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_2461.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>My Name</h4>
+      <h4>Jiajun Yan</h4>
       <p>Jiajun Yan is about to finish his studies at Howard Community College. His major is AVMP
 (Audio Video Media Production). Before that, he had many years of work experience in
 Guangzhou, China. He worked in the sales team of Yuexiu Real Estate for 5 years and became
