--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ during the pandemic. In addition, he went to HCC to improve his English and medi
 skills. Due to his studies in the United States, he can speak three languages: Mandarin,
 Cantonese and English. In his spare time, Jun also enjoys traveling and photography.
       </p>
-      <p>mail: jjun_yan@outlook.com</p>
+      <p>e-mail: jjun_yan@outlook.com</p>
       <p>tel: 443-838-3212</p>
       <hr class="w3-opacity">
       <h4 class="w3-padding-16">Technical Skills</h4>
