--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <videoWidth="100%" controls>
-        <source src="/Users/gavinyan/Downloads/贵阳/镇远古镇改.mp4" type="video/mp4">
+      <video width="400" controls>
+      <source src="mov_bbb.mp4" type="video/mp4">
       <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
       <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
       <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
