--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <video width="100" controls>
+      <video width="100%" controls>
       <source src="mov_bbb.mp4" type="video/mp4">
       </div>
       <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
