--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <video width="100%" controls>
       <source src="mov_bbb.mp4" type="video/mp4">
+      </video>
+</div>  
       </div>
       <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
       <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
