--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
     <video width="80%" controls>
-    <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/zhenyuan.mp4" type="video/mp4">
+    <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
   </div>
 
   <!-- Pagination -->
