--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
       <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
-    <video width="80%" controls>
-    <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
-  </div>
+
 
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
@@ -71,6 +69,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
       <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
+  </div>
+  <div>
+    <video width="80%" controls>
+    <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
   </div>
 
   <!-- Modal for full size images on click-->
