--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-third img{margin-bottom: 0px; opacity: 0.8; cursor: pointer}
 .w3-third img:hover{opacity: 1}
+video {
+  width: 100%;
+  height: auto;
+}
 </style>
 </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
@@ -71,7 +75,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
 
   <div>
-    <video width="70%"  controls>
+    <video width="70%" controls>
     <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
   </div>
 
