--- a/index.html
+++ b/index.html
@@ -76,9 +76,25 @@ video {
     </div>
   </div>
 
+<!--video-->
   <div>
+    <style>
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+</style>
     <video width="70%" controls>
     <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
+      <a href="#" class="button">Link Button</a>
   </div>
 
   <!-- Modal for full size images on click-->
