--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ video {
   padding-left: 30px;
   padding-right: 30px;
 }
+.item1 {
+  grid-area: header;
+  background-color: grey;
+  text-align: center;
+  color: #ffffff;
+}
 </style>
 </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
@@ -55,13 +61,13 @@ video {
     <div class="w3-third">
       <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
       <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
       <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
 
   <!-- Pagination -->
@@ -77,25 +83,14 @@ video {
   </div>
 
 <!--video-->
-  <div>
-    <style>
-.button {
-  background-color: #04AA6D;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-</style>
+<div>
+
+  <div class="item1"><h1>Video</h1></div>
     <video width="70%" controls>
     <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
-      <a href="#" class="button">Link Button</a>
-  </div>
+    </video>
+    <p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss_link_all" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
+</div>
 
   <!-- Modal for full size images on click-->
   <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
