--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@ video {
     <div class="w3-third">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
     </div>
 
     <div class="w3-third">
-      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
 
   <!-- Pagination -->
@@ -81,15 +81,16 @@ video {
       <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
-
+<div>
+<hr />
+</div>
 <!--video-->
 <div>
-
   <div class="item1"><h1>Video</h1></div>
     <video width="70%" controls>
     <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
     </video>
-    <p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss_link_all" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
+    <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
 </div>
 
   <!-- Modal for full size images on click-->
@@ -123,20 +124,9 @@ Cantonese and English. In his spare time, Jun also enjoys traveling and photogra
       <p>e-mail: jjun_yan@outlook.com</p>
       <p>tel: 443-838-3212</p>
       <hr class="w3-opacity">
-      <h4 class="w3-padding-16">Technical Skills</h4>
-      <p class="w3-wide">Photography</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
-      </div>
-      <p class="w3-wide">Web Design</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide">Photoshop</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
-      </div>
-      <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+      <h4 class="w3-padding-16">Resume</h4>
+
+      <p><a href="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/JYan_RESUME.pdf" <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></a></p>
       <hr class="w3-opacity">
 
       <h4 class="w3-padding-16">How much I charge</h4>
