--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@ video {
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
     </div>
 
     <div class="w3-third">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
 
