--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ video {
     </div>
 
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
