--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ video {
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
+      <img src="picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
       <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
     </div>
