--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@ video {
   <div class="w3-row">
     <div class="w3-third">
       <img src="picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
+      <img src="picture/IMG_7832.JPG.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
+      <img src="picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
     </div>
 
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
+      <img src="picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
+      <img src="picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
-      <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+      <img src="picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
+      <img src="picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
+      <img src="picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
     <div class="image-grid">
             <img src="https://picsum.photos/600/400?random=1" style="width:40%" onclick="onClick(this)" alt="Seaside at dusk">
@@ -162,7 +162,7 @@ video {
 <div>
   <div class="item1"><h1>Video</h1></div>
     <video width="70%" controls>
-    <source src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/video/teklab_new.mp4" type="video/mp4">
+    <source src="/video/teklab_new.mp4" type="video/mp4">
     </video>
     <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
 </div>
@@ -179,7 +179,7 @@ video {
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/picture/IMG_2461.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="picture/IMG_2461.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Jiajun Yan</h4>
       <p>Jiajun Yan is about to finish his studies at Howard Community College. His major is AVMP
@@ -200,7 +200,7 @@ Cantonese and English. In his spare time, Jun also enjoys traveling and photogra
       <hr class="w3-opacity">
       <h4 class="w3-padding-16">Resume</h4>
 
-      <p><a href="/Users/gavinyan/Documents/GitHub/jiajunyan.github.io/JYan_RESUME.pdf" <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></a></p>
+      <p><a href="jiajunyan.github.io/JYan_RESUME.pdf" <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></a></p>
       <hr class="w3-opacity">
 
       </div>
