--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ video {
   <div class="w3-row">
     <div class="w3-third">
       <img src="picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
-      <img src="picture/IMG_7832.JPG.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
+      <img src="picture/IMG_7832.jpg" style="width:100%" onclick="onClick(this)" alt="Witness of love">
       <img src="picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
     </div>
 
