--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@ video {
     <div class="w3-third">
       <img src="picture/IMG_7919.jpg" style="width:100%" onclick="onClick(this)" alt="Seaside at dusk">
       <img src="picture/IMG_7832.JPG" style="width:100%" onclick="onClick(this)" alt="Witness of love">
-      <img src="picture/IMG_20240525_155701.jpg" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
+      <img src="picture/IMG_20240525_155701.JPG" style="width:100%" onclick="onClick(this)" alt="Idyllic dream house">
     </div>
 
     <div class="w3-third">
-      <img src="picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
-      <img src="picture/IMG_20221126_164555.jpg" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
-      <img src="picture/IMG_20230110_145557.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="picture/IMG_20220827_115744.JPG" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
+      <img src="picture/IMG_20221126_164555.JPG" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
+      <img src="picture/IMG_20230110_145557.JPG" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
 
     <div class="w3-third">
-      <img src="picture/IMG_20230402_235012.jpg" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
-      <img src="picture/IMG_20230110_153813.jpg" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
-      <img src="picture/IMG_20230402_234901.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+      <img src="picture/IMG_20230402_235012.JPG" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
+      <img src="picture/IMG_20230110_153813.JPG" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
+      <img src="picture/IMG_20230402_234901.JPG" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
     <div class="image-grid">
             <img src="https://picsum.photos/600/400?random=1" style="width:40%" onclick="onClick(this)" alt="Seaside at dusk">
@@ -162,7 +162,7 @@ video {
 <div>
   <div class="item1"><h1>Video</h1></div>
     <video width="70%" controls>
-    <source src="/video/teklab_new.mp4" type="video/mp4">
+    <source src="video/teklab_new.mp4" type="video/mp4">
     </video>
     <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
 </div>
@@ -179,7 +179,7 @@ video {
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="picture/IMG_2461.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="picture/IMG_2461.JPG" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Jiajun Yan</h4>
       <p>Jiajun Yan is about to finish his studies at Howard Community College. His major is AVMP
