--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Cantonese and English. In his spare time, Jun also enjoys traveling and photogra
       <hr class="w3-opacity">
       <h4 class="w3-padding-16">Resume</h4>
 
-      <p><a href="jiajunyan.github.io/JYan_RESUME.pdf" <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></a></p>
+      <p><a href="JYan_RESUME.pdf" <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></a></p>
       <hr class="w3-opacity">
 
       </div>
