--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ video {
     </div>
 
     <div class="w3-third">
-      <img src="picture/IMG_20220827_115744.JPG" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
+      <img src="picture/IMG_20220827_115744.jpg" style="width:100%" onclick="onClick(this)" alt="The horizon line between sky and earth">
       <img src="picture/IMG_20221126_164555.JPG" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
       <img src="picture/IMG_20230110_145557.JPG" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
