--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ video {
     <video width="70%" controls>
     <source src="video/teklab_new.mp4" type="video/mp4">
     </video>
-    <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
+    <p><div class="item1"><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></div></a></p>
 </div>
 
   <!-- Modal for full size images on click-->
