--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@ video {
     </div>
 
   <!-- Pagination -->
+  <div class="w3-center w3-padding-32">
+      <div class="w3-bar">
+          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="prevPage()">&laquo;</a>
+          <a href="#" class="w3-bar-item w3-black w3-button" onclick="goToPage(1)">1</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(2)">2</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(3)">3</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="goToPage(4)">4</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="nextPage()">&raquo;</a>
+      </div>
+  </div>
   <div id="myModal" class="modal">
       <span class="close" onclick="closeModal()">&times;</span>
       <img class="modal-content" id="modalImg">
