--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@ video {
       <img src="picture/IMG_20230110_153813.JPG" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
       <img src="picture/IMG_20230402_234901.JPG" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
-
+    <div class="image-grid">
+            <img src="https://picsum.photos/600/400?random=1" style="width:40%" onclick="onClick(this)" alt="Seaside at dusk">
+            <img src="https://picsum.photos/600/400?random=2" style="width:40%" onclick="onClick(this)" alt="Witness of love">
+            <img src="https://picsum.photos/600/400?random=3" style="width:40%" onclick="onClick(this)" alt="Idyllic dream house">
+            <img src="https://picsum.photos/600/400?random=4" style="width:30%" onclick="onClick(this)" alt="The horizon line between sky and earth">
+            <img src="https://picsum.photos/600/400?random=5" style="width:100%" onclick="onClick(this)" alt="Get some fries on the pier">
+            <img src="https://picsum.photos/600/400?random=6" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+            <img src="https://picsum.photos/600/400?random=7" style="width:100%" onclick="onClick(this)" alt="Stroll through the garden">
+            <img src="https://picsum.photos/600/400?random=8" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
+            <img src="https://picsum.photos/600/400?random=9" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+        </div>
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
       <div class="w3-bar">
