--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ video {
       <img src="picture/IMG_20230110_153813.JPG" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
       <img src="picture/IMG_20230402_234901.JPG" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
-    <div class="image-grid">
+    <div class="w3-third">
             <img src="https://picsum.photos/600/400?random=1" style="width:40%" onclick="onClick(this)" alt="Seaside at dusk">
             <img src="https://picsum.photos/600/400?random=2" style="width:40%" onclick="onClick(this)" alt="Witness of love">
             <img src="https://picsum.photos/600/400?random=3" style="width:40%" onclick="onClick(this)" alt="Idyllic dream house">
