--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ video {
       <img src="picture/IMG_20230110_153813.JPG" style="width:100%" onclick="onClick(this)" alt="Its miniature world">
       <img src="picture/IMG_20230402_234901.JPG" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
     </div>
-    <div class="w3-third">
+    <div class="image-grid">
             <img src="https://picsum.photos/600/400?random=1" style="width:40%" onclick="onClick(this)" alt="Seaside at dusk">
             <img src="https://picsum.photos/600/400?random=2" style="width:40%" onclick="onClick(this)" alt="Witness of love">
             <img src="https://picsum.photos/600/400?random=3" style="width:40%" onclick="onClick(this)" alt="Idyllic dream house">
@@ -92,6 +92,7 @@ video {
           <a href="#" class="w3-bar-item w3-button w3-hover-black" onclick="nextPage()">&raquo;</a>
       </div>
   </div>
+
   <div id="myModal" class="modal">
       <span class="close" onclick="closeModal()">&times;</span>
       <img class="modal-content" id="modalImg">
