--- a/index.html
+++ b/index.html
@@ -208,7 +208,13 @@ video {
     <video width="70%" controls>
     <source src="video/teklab_new.mp4" type="video/mp4">
     </video>
-    <p><a href="https://www.youtube.com/@Katsun-Ngan" <button class="w3-button w3-block w3-grey w3-margin-bottom">More video</button></a></p>
+    <p>
+<a href="https://www.youtube.com/@Katsun-Ngan" class="video-btn-link">
+<button class="w3-button w3-block w3-grey w3-margin-bottom" style="font-size: 24px;">
+More video
+</button>
+</a>
+</p>
 </div>
 
   <!-- Modal for full size images on click-->
@@ -222,7 +228,7 @@ video {
 
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-    <h4><b>About Me</b></h4>
+    <h4 class="w3-center" style="font-size: 28px;"><b>About Me</b></h4>
     <img src="picture/IMG_2461.JPG" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Jiajun Yan</h4>
@@ -254,24 +260,15 @@ Cantonese and English. In his spare time, Jun also enjoys traveling and photogra
   <!-- Contact section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
     <div class="w3-content" style="max-width:600px">
-      <h4 class="w3-center"><b>Contact Me</b></h4>
-      <h4 class="w3-center"><p>Email: jjun_yan@outlook.com</p></h4>
+    <h4 class="w3-center" style="font-size: 28px;"><b>Contact Me</b></h4>
+      <h4 class="w3-center">
+  <p>
+    <a href="mailto:jjun_yan@outlook.com" style="font-size: 30px;">
+      Email: jjun_yan@outlook.com
+    </a>
+  </p>
+</h4>
 
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-section">
-          <label>Name</label>
-          <input class="w3-input w3-border" type="text" name="Name" required>
-        </div>
-        <div class="w3-section">
-          <label>Email</label>
-          <input class="w3-input w3-border" type="text" name="Email" required>
-        </div>
-        <div class="w3-section">
-          <label>Message</label>
-          <input class="w3-input w3-border" type="text" name="Message" required>
-        </div>
-        <button type="submit" class="w3-button w3-block w3-black w3-margin-bottom">Send Message</button>
-      </form>
     </div>
   </div>
 
