--- a/index.html
+++ b/index.html
@@ -124,6 +124,24 @@ video {
             <img src="picture/IMG_20230402_235012.JPG" onclick="onClick(this)" alt="Stroll through the garden">
             <img src="picture/IMG_20230110_153813.JPG" onclick="onClick(this)" alt="Its miniature world">
             <img src="picture/IMG_20230402_234901.JPG" onclick="onClick(this)" alt="What a beautiful day!">
+            <img src="picture/IMG_0898.JPG" onclick="onClick(this)" alt="Killer whales in town!">
+            <img src="picture/IMG_6266.JPG" onclick="onClick(this)" alt="Spring Vitality">
+            <img src="picture/IMG_6716.JPG" onclick="onClick(this)" alt="A quiet summer corner">
+            <img src="picture/IMG_6803.JPG" onclick="onClick(this)" alt="Chesapeake Bay Bridge">
+            <img src="picture/IMG_6829.JPG" onclick="onClick(this)" alt="Extreme contrast">
+            <img src="picture/IMG_6841.JPG" onclick="onClick(this)" alt="Provide direction">
+            <img src="picture/IMG_20250201_135852.JPG" onclick="onClick(this)" alt="City Memory">
+            <img src="picture/IMG_20250128_203208.JPG" onclick="onClick(this)" alt="Fish lights in water">
+            <img src="picture/IMG_20241115_194917.JPG" onclick="onClick(this)" alt="Bright moon and light clouds">
+            <img src="picture/IMG_2698.JPG" onclick="onClick(this)" alt="Autumn Love">
+            <img src="picture/IMG_3695.JPG" onclick="onClick(this)" alt="A corner of the ancient town">
+            <img src="picture/IMG_20241031_191813.JPG" onclick="onClick(this)" alt="Halloween Family">
+            <img src="picture/IMG_20241221_210425.JPG" onclick="onClick(this)" alt="Christmas Overture">
+            <img src="picture/IMG_20241222_142252.JPG" onclick="onClick(this)" alt="Ancient and Modern">
+            <img src="picture/IMG_20250125_170628.JPG" onclick="onClick(this)" alt="Mammoth Parade">
+            <img src="picture/IMG_20250124_163040.JPG" onclick="onClick(this)" alt="Hello!">
+            <img src="picture/IMG_20220827_111803.JPG" onclick="onClick(this)" alt="Greenery">
+            <img src="picture/IMG_20230110_151358.JPG" onclick="onClick(this)" alt="Finding Nemo">
     </div>
 
   <!-- Pagination -->
@@ -149,7 +167,7 @@ video {
          const modal = document.getElementById('myModal');
          const modalImg = document.getElementById('modalImg');
          let currentPage = 1;
-         const imagesPerPage = 3;
+         const imagesPerPage = 9;
 
          function onClick(img) {
              modal.style.display = "block";
