--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ video {
             <img src="picture/IMG_20230402_235012.JPG" onclick="onClick(this)" alt="Stroll through the garden">
             <img src="picture/IMG_20230110_153813.JPG" onclick="onClick(this)" alt="Its miniature world">
             <img src="picture/IMG_20230402_234901.JPG" onclick="onClick(this)" alt="What a beautiful day!">
-            <img src="picture/IMG_0898.JPG" onclick="onClick(this)" alt="Killer whales in town!">
+            <img src="picture/IMG_0898.jpg" onclick="onClick(this)" alt="Killer whales in town!">
             <img src="picture/IMG_6266.JPG" onclick="onClick(this)" alt="Spring Vitality">
             <img src="picture/IMG_6716.JPG" onclick="onClick(this)" alt="A quiet summer corner">
             <img src="picture/IMG_6803.JPG" onclick="onClick(this)" alt="Chesapeake Bay Bridge">
