--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ video {
             <img src="picture/IMG_20241222_142252.jpg" onclick="onClick(this)" alt="Ancient and Modern">
             <img src="picture/IMG_20250125_170628.jpg" onclick="onClick(this)" alt="Mammoth Parade">
             <img src="picture/IMG_20250124_163040.jpg" onclick="onClick(this)" alt="Hello!">
-            <img src="picture/IMG_20220827_111803.jpg" onclick="onClick(this)" alt="Greenery">
+            <img src="picture/IMG_20220827_111803.JPG" onclick="onClick(this)" alt="Greenery">
             <img src="picture/IMG_20230110_151358.JPG" onclick="onClick(this)" alt="Finding Nemo">
     </div>
 
